# opencode-omo-config

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: copy-next-assets.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: backup_config.toml  fetch_schema.toml  list_presets.toml  load_preset.toml  read_config.toml  restore_config.toml  save_preset.toml
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/settings/oh-my-openagent/: page.tsx
src/app/settings/opencode/: page.tsx
src/components/: AppNav.tsx  StatusToast.tsx
src/components/common/: ModelPicker.tsx
src/components/settings/: DynamicFormFields.tsx  EngagedModelsSummary.tsx  OhMyOpenagentSettings.tsx  OhMyOpenagentTypes.ts  OpencodeConfigSettings.tsx  config-utils.ts  schema-utils.ts
src/lib/: api-client.ts  api.ts  json-schema-types.ts  types.ts
src/server/: config-io.ts  opencode-models.ts  settings-store.ts
src/types/: kanban.ts
